--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,8 +33,10 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: tar -czvf nahui.tar.gz --exclude='readme.md' *
+      - name: Run script
+        run: |
+          sudo apt install tar -y
+          tar -czvf nahui.tar.gz --exclude='readme.md' *
 
       - name: Release Upload
         # You may pin to the exact commit or the version.
