--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,10 +33,17 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run script
-        run: |
-          sudo apt install tar -y
-          tar -czvf nahui.tar.gz --exclude='readme.md' *
+      - name: Install tar
+        run: sudo apt-get install tar -y   # Встановлення tar
+
+      - name: Create archive
+        run: tar -czvf nahui.tar.gz --exclude='readme.md' *   # Створення архіву
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2   # Використання вбудованої дії для завантаження артефактів
+        with:
+          name: nahui-artifact
+          path: nahui.tar.gz   # Шлях до архіву, який потрібно завантажити
 
       - name: Upload files
       - uses: ncipollo/release-action@v1
