--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,11 +30,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout
       - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Install tar
-        run: sudo apt-get install tar -y   # Встановлення tar
 
       - name: Create archive
         run: tar -czvf nahui.tar.gz --exclude='readme.md' *   # Створення архіву
