--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,14 +11,6 @@ on:
 
 permissions:
   contents: write
-  checks: write
-
-  actions: read
-  issues: read
-  packages: write
-  pull-requests: read
-  repository-projects: read
-  statuses: read
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -34,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Create archive
-        run: tar -czvf nahui.tar.gz --exclude='readme.md' *   # Створення архіву
+        run: tar -czvf nahui.tar.gz --exclude='README.md' *   # Створення архіву
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2   # Використання вбудованої дії для завантаження артефактів
@@ -42,9 +34,8 @@ jobs:
           name: nahui-artifact
           path: nahui.tar.gz   # Шлях до архіву, який потрібно завантажити
 
-      - name: Upload files
-        uses: ncipollo/release-action@v1
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: ./nahui.tar.gz
-          tag: ${{ github.ref }}
+          files: nahui.tar.gz
