--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Create archive
-        run: tar -czvf nahui.tar.gz --exclude='README.md' *   # Створення архіву
+        run: make zip   # Створення архіву
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2   # Використання вбудованої дії для завантаження артефактів
